--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-skillbars": "^2.2.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
