--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-skillbars": "^2.2.0",
+    "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.2.2"
   },
