Fixed some minor issues

--- a/public/projectsData.json
+++ b/public/projectsData.json
@@ -41,7 +41,7 @@
     ],
     "startDate": "Mar 22, 2024",
     "endDate": "Will Be Updated",
-    "githubLink": "https://github.com/Shahriar090/My-Personal-Portfolio",
-    "liveDemo": "https://shahriar-hossain.netlify.app"
+    "githubLink": "https://github.com/Shahriar090/my-portfolio-2",
+    "liveDemo": "https://dev-shahriar.netlify.app"
   }
 ]
