--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
